deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: react-kong
  name: react-kong
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-kong
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: react-kong
    spec:
      containers:
      - image: kollxia/react-kongza
        name: react-kongza
        resources: {}
status: {}
