ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: react-kong
  namespace: kong
spec:
  rules:
  - host: ken-ubuntu.saksiam.corp
    http:
      paths:
      - backend:
          service:
            name: react-kong
            port:
              number: 3000
        path: /react-kong
        pathType: Exact
status:
  loadBalancer: {}
